Baseline LSTM Model Complete and text tokenized.

--- a/notebooks/exploratory_notebook.ipynb
+++ b/notebooks/exploratory_notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "id": "2aff7ab4",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 93,
    "id": "cbaa8cbb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sys.path.append('../')\n",
     "#load data into a Panda's dataframe\n",
     "working_dir = os.getcwd()\n",
     "data_path = os.path.dirname(working_dir) + '/data/'\n",
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 94,
    "id": "e533e234",
    "metadata": {},
    "outputs": [
@@ -113,15 +112,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                               complaint_description               assigned_division\n",
-       "0  Date last observed: 29-jun-20;    time last ob...     Housing Inspection Services\n",
-       "1  Unpermitted interior framing at 3rd level atti...  Electrical Inspection Division\n",
-       "2  Elevator (in the parking area )to condos is in...     Housing Inspection Services\n",
-       "3  Complainant is concerned about the lenght of t...    Building Inspection Division\n",
-       "4  Date last observed: 06-jan-21;    time last ob...    Building Inspection Division"
+       "                               complaint_description  \\\n",
+       "0  Date last observed: 29-jun-20;    time last ob...   \n",
+       "1  Unpermitted interior framing at 3rd level atti...   \n",
+       "2  Elevator (in the parking area )to condos is in...   \n",
+       "3  Complainant is concerned about the lenght of t...   \n",
+       "4  Date last observed: 06-jan-21;    time last ob...   \n",
+       "\n",
+       "                assigned_division  \n",
+       "0     Housing Inspection Services  \n",
+       "1  Electrical Inspection Division  \n",
+       "2     Housing Inspection Services  \n",
+       "3    Building Inspection Division  \n",
+       "4    Building Inspection Division  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,6 +178,7 @@
     }
    ],
    "source": [
+    "#determine how many duplicate entries there are\n",
     "df.duplicated().sum()"
    ]
   },
@@ -438,41 +445,6 @@
     "ax.set_xlabel('Complaint Length', fontsize = 30)\n",
     "ax.set_ylabel('Count', fontsize = 30)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "id": "f08c49c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "routine_df = df[df['complaint_description'].str.contains(\"routine inspection\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "id": "1c9007cc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Housing Inspection Services     833\n",
-       "Building Inspection Division      4\n",
-       "Code Enforcement Section          3\n",
-       "Plumbing Inspection Division      2\n",
-       "Name: assigned_division, dtype: int64"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "routine_df.assigned_division.value_counts()"
    ]
   },
   {
