Added comments to code to create wordclouds.

--- a/notebooks/exploratory_analysis.ipynb
+++ b/notebooks/exploratory_analysis.ipynb
@@ -691,13 +691,13 @@
     }
    ],
    "source": [
-    "text = \" \".join(complaint for complaint in df.complaint_description)\n",
-    "wordcloud = WordCloud(stopwords=stop_words, background_color=\"whitesmoke\",\n",
+    "text = \" \".join(complaint for complaint in df.complaint_description)                #join complaints together\n",
+    "wordcloud = WordCloud(stopwords=stop_words, background_color=\"whitesmoke\",          #create wordcloud\n",
     "                     collocations = False, width=2400, height=1000).generate(text)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(24,10))\n",
-    "ax = plt.imshow(wordcloud, interpolation='bilinear')\n",
-    "plt.axis(\"off\")\n"
+    "fig, ax = plt.subplots(figsize=(24,10))                                             #set figsize\n",
+    "ax = plt.imshow(wordcloud, interpolation='bilinear')                                #dispaly wordcloud\n",
+    "plt.axis(\"off\")                                                                     #remove axis"
    ]
   },
   {
@@ -748,24 +748,13 @@
     }
    ],
    "source": [
-    "text = \" \".join(complaint for complaint in df.complaint_description)\n",
-    "wordcloud = WordCloud(stopwords=stop_words, background_color=\"aliceblue\",\n",
+    "text = \" \".join(complaint for complaint in df.complaint_description)                #join complaints together \n",
+    "wordcloud = WordCloud(stopwords=stop_words, background_color=\"aliceblue\",           #create collocation wordcloud (pairs of words)\n",
     "                     colormap = \"tab10\", width=2400, height=1000).generate(text)\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(24,10))\n",
-    "ax = plt.imshow(wordcloud, interpolation='bilinear')\n",
-    "plt.axis(\"off\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "015310ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#now we'll create a wordcloud for each class \n",
-    "complaint_classes = np.unique(df['assigned_division'].values)"
+    "fig, ax = plt.subplots(figsize=(24,10))                                             #set figure size\n",
+    "ax = plt.imshow(wordcloud, interpolation='bilinear')                                #display wordcloud\n",
+    "plt.axis(\"off\")                                                                     #remove axis                                                                   "
    ]
   },
   {
@@ -788,20 +777,22 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(3,2, figsize=(80, 40))\n",
-    "axes = axes.flatten()\n",
-    "axes[5].remove()\n",
+    "complaint_classes = np.unique(df['assigned_division'].values)                       #create list of class names\n",
     "\n",
-    "for i, complaint_class in enumerate(complaint_classes):\n",
-    "    \n",
+    "fig, axes = plt.subplots(3,2, figsize=(80, 40))                                     #prepare figure with subplots\n",
+    "axes = axes.flatten()                                                               #flatten axes\n",
+    "axes[5].remove()                                                                    #remove 6th element from axes as we only have 5 classes\n",
+    "\n",
+    "for i, complaint_class in enumerate(complaint_classes):                             #loop through each class with its index\n",
+    "\n",
     "    text = \" \".join(complaint for complaint in df.loc[df['assigned_division'] \\\n",
-    "                    == complaint_class].complaint_description)\n",
+    "                    == complaint_class].complaint_description)                      #for each class join the complaints together into one text for that class\n",
     "\n",
-    "    wordcloud = WordCloud(stopwords=stop_words,background_color=\"aliceblue\",\n",
+    "    wordcloud = WordCloud(stopwords=stop_words,background_color=\"aliceblue\",        #create a wordcloud for the class\n",
     "                          collocations = False,colormap = \"tab10\").generate(text)\n",
     "    \n",
-    "    axes[i].imshow(wordcloud,interpolation='none')\n",
-    "    axes[i].set_title(complaint_class, size = 60)"
+    "    axes[i].imshow(wordcloud,interpolation='none')                                  #display the class on axes using its index to determine position in subplot\n",
+    "    axes[i].set_title(complaint_class, size = 60)                                   #set title of the wordcloud to the class name"
    ]
   },
   {
