Updated several functions, documentation, and ReadMe.

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -130,7 +130,8 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "from keras.layers import Input, Dense, Embedding, Flatten, Activation, LeakyReLU,Bidirectional, LSTM, BatchNormalization, GlobalAveragePooling1D, GlobalMaxPooling1D\n",
     "from keras.models import Sequential\n",
-    "from keras.callbacks import EarlyStopping"
+    "from keras.callbacks import EarlyStopping\n",
+    "import tabulate"
    ]
   },
   {
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "38fe255c",
    "metadata": {},
    "outputs": [],
@@ -482,15 +483,17 @@
    "source": [
     "#create lemmatized text\n",
     "lemmatized = df.copy()\n",
+    "#apply normalize_text to dataframe\n",
     "lemmatized['complaint_description'] = lemmatized['complaint_description'] \\\n",
     "                                      .progress_apply(lambda x: normalize_text(x,\n",
     "                                                                lemmatize = True))\n",
+    "#save lemmatized version of text\n",
     "lemmatized.to_csv(lemmatized_path + '/lemmatized_text.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "5cf307fb",
    "metadata": {},
    "outputs": [],
@@ -502,122 +505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "f0a98737",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>complaint_description</th>\n",
-       "      <th>assigned_division</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>27329</th>\n",
-       "      <td>['lot', 'garbage', 'item', 'block', 'exit']</td>\n",
-       "      <td>Housing Inspection Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96166</th>\n",
-       "      <td>['work', 'start', 'without', 'permit', 'pa', '...</td>\n",
-       "      <td>Building Inspection Division</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92380</th>\n",
-       "      <td>['circuit', 'breaker', 'load', 'reset', 'const...</td>\n",
-       "      <td>Housing Inspection Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65927</th>\n",
-       "      <td>['elevator', 'work', 'timeelevator', 'dangerous']</td>\n",
-       "      <td>Housing Inspection Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68892</th>\n",
-       "      <td>['electrical', 'meter', 'instal', 'roof', 'jun...</td>\n",
-       "      <td>Electrical Inspection Division</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78261</th>\n",
-       "      <td>['recent', 'roof', 'fence', 'installation', 'e...</td>\n",
-       "      <td>Building Inspection Division</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96050</th>\n",
-       "      <td>['extensive', 'work', 'wout', 'permit']</td>\n",
-       "      <td>Building Inspection Division</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23264</th>\n",
-       "      <td>['date', 'last', 'observe', 'jul', 'exact', 'l...</td>\n",
-       "      <td>Building Inspection Division</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>123873</th>\n",
-       "      <td>['bed', 'box', 'spring', 'sink', 'drain', 'pro...</td>\n",
-       "      <td>Housing Inspection Services</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65758</th>\n",
-       "      <td>['stove', 'gas', 'stove', 'go', 'lot', 'large'...</td>\n",
-       "      <td>Housing Inspection Services</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    complaint_description  \\\n",
-       "27329         ['lot', 'garbage', 'item', 'block', 'exit']   \n",
-       "96166   ['work', 'start', 'without', 'permit', 'pa', '...   \n",
-       "92380   ['circuit', 'breaker', 'load', 'reset', 'const...   \n",
-       "65927   ['elevator', 'work', 'timeelevator', 'dangerous']   \n",
-       "68892   ['electrical', 'meter', 'instal', 'roof', 'jun...   \n",
-       "78261   ['recent', 'roof', 'fence', 'installation', 'e...   \n",
-       "96050             ['extensive', 'work', 'wout', 'permit']   \n",
-       "23264   ['date', 'last', 'observe', 'jul', 'exact', 'l...   \n",
-       "123873  ['bed', 'box', 'spring', 'sink', 'drain', 'pro...   \n",
-       "65758   ['stove', 'gas', 'stove', 'go', 'lot', 'large'...   \n",
-       "\n",
-       "                     assigned_division  \n",
-       "27329      Housing Inspection Services  \n",
-       "96166     Building Inspection Division  \n",
-       "92380      Housing Inspection Services  \n",
-       "65927      Housing Inspection Services  \n",
-       "68892   Electrical Inspection Division  \n",
-       "78261     Building Inspection Division  \n",
-       "96050     Building Inspection Division  \n",
-       "23264     Building Inspection Division  \n",
-       "123873     Housing Inspection Services  \n",
-       "65758      Housing Inspection Services  "
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#view sample of lemamtized text\n",
     "lemmatized.sample(10)"
    ]
   },
@@ -660,8 +553,8 @@
     }
    ],
    "source": [
-    "print(lemmatized.isna().sum())\n",
-    "print(\"Duplicated :\", lemmatized.duplicated().sum())"
+    "print(lemmatized.isna().sum())                          #print null values\n",
+    "print(\"Duplicated :\", lemmatized.duplicated().sum())    #print duplicates"
    ]
   },
   {
@@ -810,8 +703,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lemmatized.drop_duplicates(inplace = True)\n",
-    "stemmed.drop_duplicates(inplace = True)"
+    "lemmatized.drop_duplicates(inplace = True)  #drop lemmatized duplicates\n",
+    "stemmed.drop_duplicates(inplace = True)     #drop stemmed duplicates"
    ]
   },
   {
@@ -897,7 +790,7 @@
     }
    ],
    "source": [
-    "lemmatized.assigned_division.value_counts()"
+    "lemmatized.assigned_division.value_counts() #print value counts for each division after lemmatization"
    ]
   },
   {
@@ -972,10 +865,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "classes_lemmatized = lemmatized.assigned_division\n",
-    "lemmatized_class_weights = class_weight.compute_class_weight('balanced',\n",
+    "classes_lemmatized = lemmatized.assigned_division                           #select classes\n",
+    "lemmatized_class_weights = class_weight.compute_class_weight('balanced',    #compute balanced class weights\n",
     "                                                 classes = np.unique(classes_lemmatized),y = classes_lemmatized)\n",
-    "lemmatized_class_weights = dict(enumerate(lemmatized_class_weights))"
+    "lemmatized_class_weights = dict(enumerate(lemmatized_class_weights))        #convert class weights list to dictionary"
    ]
   },
   {
@@ -1026,15 +919,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "encoder = LabelBinarizer()\n",
+    "encoder = LabelBinarizer()                          #define label binarizer\n",
     "\n",
-    "X_stemmed = stemmed.complaint_description\n",
-    "y_stemmed = encoder.fit_transform(classes_stemmed)\n",
-    "X_lemmatized = lemmatized.complaint_description\n",
-    "y_lemmatized = encoder.fit_transform(lemmatized.assigned_division)\n",
-    "class_names = encoder.classes_\n",
+    "X_stemmed = stemmed.complaint_description           #select stemmed complaints\n",
+    "y_stemmed = encoder.fit_transform(classes_stemmed)  #select stemmed target\n",
+    "X_lemmatized = lemmatized.complaint_description     # selected lemmatized complaints which will be our feature\n",
+    "y_lemmatized = encoder.fit_transform(lemmatized.assigned_division)  #fit label finarizer\n",
+    "class_names = encoder.classes_                      #select and save class names to preserve order for later use\n",
     "\n",
-    "with open(lemmatized_path + 'class_names.pickle', 'wb') as f:\n",
+    "with open(lemmatized_path + 'class_names.pickle', 'wb') as f:   #save class names \n",
     "    pickle.dump(class_names, f)"
    ]
   },
@@ -1379,8 +1272,8 @@
    "outputs": [],
    "source": [
     "#define tensorflow tokenizer for the lemmatized text\n",
-    "num_words = 10000\n",
-    "lemmatized_tokenizer = Tokenizer(num_words=num_words, oov_token='<UNK>')\n",
+    "num_words = 10000   #number of words to use in vocabulary\n",
+    "lemmatized_tokenizer = Tokenizer(num_words=num_words, oov_token='<UNK>') #initialize the tokenizer with out of vocabulary token\n",
     "\n",
     "#fit tokenizer to text\n",
     "lemmatized_tokenizer.fit_on_texts(X_lemmatized)\n",
@@ -5553,10 +5446,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "e37b67f25a46ee888e10077d6c209310584a5ea365efc73102c6c8543c59a6e3"
+  },
   "kernelspec": {
    "display_name": "Python [conda env:sf_building_complaints] *",
    "language": "python",
-   "name": "conda-env-sf_building_complaints-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
